tests/type/errors/bad_assign2.xi
foo(x:bool) {
    x = 1
}